--- a/index.html
+++ b/index.html
@@ -9,103 +9,199 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav">
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="">contacts </a></li>
-          <li class="nav-item"><a class="nav-link" href="">About me </a></li>
-          <li class="nav-item"><a class="nav-link" href="">skills </a></li>
-          <li class="nav-item"><a class="nav-link" href="">code </a></li>
-          <li class="nav-item"><a class="nav-link" href="">courses </a></li>
-          <li class="nav-item"><a class="nav-link" href="">projects </a></li>
-          <li class="nav-item"><a class="nav-link" href="">education </a></li>
-          <li class="nav-item"><a class="nav-link" href="">language</a></li>
-        </ul>
-      </nav>
-        <div class="header__title">
-          <div class="header__name">Roman Lysiuk</div>
-          <div class="header-profession">frontend developer</div>
-        </div>
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link nav-link_contacts" href="#Contacts"
+                >Contacts
+              </a>
+            </li>
+            <!-- <li class="nav-item"><a class="nav-link" href="#About-me">About me </a></li> -->
+            <!-- <li class="nav-item"><a class="nav-link" href="#Skills">Skills </a></li> -->
+            <!-- <li class="nav-item"><a class="nav-link" href="#Code">Code </a></li> -->
+            <!-- <li class="nav-item"><a class="nav-link" href="#Courses">Courses </a></li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="#Projects">Projects </a>
+            </li>
+            <!-- <li class="nav-item"><a class="nav-link" href="#Education">Education </a></li> -->
+            <!-- <li class="nav-item"><a class="nav-link" href="#Language">Language</a></li> -->
+          </ul>
+        </nav>
       </div>
     </header>
     <main class="main">
-      <div class="container">
-
-        <section class="section" id="profile">
+      <div class="container main-container">
+        <section class="section section-profile" id="profile">
           <div class="profile-image">
             <img src="assets/images/photo.jpg" alt="my-photo" />
           </div>
           <div class="section-title">
             <h1>Roman Lysiuk</h1>
-          </div>
-          <div class="section-subtitle">
-            <h3>frontend developer</h3>
+            <div class="section-subtitle">
+              <h3>frontend developer</h3>
+            </div>
           </div>
         </section>
-        <section class="section" id="About-me">
+        <section class="section section-about" id="About-me">
           <div class="section-title">
             <h2>About me</h2>
-            <p>My name is Roman and I am 26 years old. My main specialty is a cook, pastry chef. I have been working in this area for about 9 years.
-
-              This profession has helped me develop skills such as:
-              
-              ability to work in stressful situations
-              keep many processes under control in parallel.
-              I want to learn how to program in order to change my current profession.</p>
+            <p>
+              My name is Roman and I am 26 years old. My main specialty is a
+              cook, pastry chef. I have been working in this area for about 9
+              years. This profession has helped me develop skills such as:
+              ability to work in stressful situations keep many processes under
+              control in parallel. I want to learn how to program in order to
+              change my current profession.
+            </p>
           </div>
         </section>
-        <section class="section" id="Contacts">
+        <div class="popup-contact">
+          <img src="assets/icons/my-contacts.svg" alt="my-contacts" />
+        </div>
+        <section class="section-contacts" id="Contacts">
           <div class="section-title">
             <h2>Contacts</h2>
           </div>
+          <div class="section-contacts__close close"></div>
           <ul>
-             <li>
-              <img src="assets/icons/gmail.png" alt="gmail">
+            <li>
+              <img src="assets/icons/gmail.png" alt="gmail" />
               <span>Email :</span>
-               <a href="mailto:gekalo1025@gmail.com">gekalo1025@gmail.com</a>
-             </li>
-             <li>
-              <img src="assets/icons/phone.png" alt="phone">
+              <a target="_blank" href="mailto:gekalo1025@gmail.com"
+                >gekalo1025@gmail.com</a
+              >
+            </li>
+            <li>
+              <img src="assets/icons/phone.png" alt="phone" />
               <span>Phone :</span>
-              <a href="tel:+380662351408">+380662351408</a>
-             </li>
-             <li>
-              <img src="assets/icons/telegram.png" alt="Telegram">
+              <a target="_blank" href="tel:+380662351408">+380662351408</a>
+            </li>
+            <li>
+              <img src="assets/icons/telegram.png" alt="Telegram" />
               <span>Telegram :</span>
-               <a href="https://t.me/roma_lysiuk">@roma_lysiuk</a>
-             </li>
-             <li>
-              <img src="assets/icons/discord.png" alt="discord">
+              <a target="_blank" href="https://t.me/roma_lysiuk"
+                >@roma_lysiuk</a
+              >
+            </li>
+            <li>
+              <img src="assets/icons/discord.png" alt="discord" />
               <span>Discord :</span>
-               <a href="https://discord.com/users/533262748034007041/">gekalo1025</a>
-             </li>
-
-
-
+              <a
+                target="_blank"
+                href="https://discord.com/users/533262748034007041/"
+                >gekalo1025</a
+              >
+            </li>
           </ul>
-
         </section>
-        <section class="section" id="Skills">
+        <section class="section section-skills" id="Skills">
           <div class="section-title">
             <h2>Skills</h2>
           </div>
           <ul>
-            <li>HTML5, CSS3</li>
-            <li>Git, GitHub</li>
-            <li>VS Code</li>
-            <li>Adobe Photoshop, Illustrator</li>
+            <li>
+              <div class="skill-block">
+                <p>HTML5</p>
+                <ul class="skill-list">
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div class="skill-block">
+                <p>CSS3</p>
+                <ul class="skill-list">
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div class="skill-block">
+                <p>Git, GitHub</p>
+                <ul class="skill-list">
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div class="skill-block">
+                <p>SCSS</p>
+                <ul class="skill-list">
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div class="skill-block">
+                <p>JS basic</p>
+                <ul class="skill-list">
+                  <li class="skills-list__item"></li>
+                  <li class="skills-list__item"></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                  <li
+                    class="skills-list__item skills-list__item_another-colour"
+                  ></li>
+                </ul>
+              </div>
+            </li>
           </ul>
         </section>
-        <section class="section" id="Code">
+        <section class="section section" id="Code">
           <div class="section-title">
             <h2>Code</h2>
           </div>
           <pre>
             function isPrime(num) {
               let possibleDivisors = Math.round(Math.pow(num,0.5))
-              if(num<=1){
+              if(num&lt;=1){
                 return false;
               }
-              for(let i=2;i<=possibleDivisors;i++){
+              for(let i=2;i&lt;=possibleDivisors;i++){
                 if(num % i ===0){
                   return false;
                   }
@@ -121,28 +217,33 @@
           </div>
           <ul>
             <li>RSS School Stage 0, JavaScript/Front-end</li>
-            <li>Course at coursera.org HSE University "Financial Markets and Institutions"</li>
-            <li>Course at coursera.org Saint Petersburg State University ""Enterprise economy</li>
-          </ul>
-        </section>
-        <section class="section" id="Projects">
-          <div class="section-title">
-            <h2>Projects</h2>
-          </div>
-          <ul>
             <li>
-              <span>project Momentum</span>
-              <a href="https://rolling-scopes-school.github.io/gekalo1025-JSFEPRESCHOOL2022Q2/momentum/">Momentum</a>
+              Course at coursera.org HSE University "Financial Markets and
+              Institutions"
             </li>
             <li>
-              <span>project Travel</span>
-              <a href="https://rolling-scopes-school.github.io/gekalo1025-JSFEPRESCHOOL2022Q2/Travel/">Travel</a>
+              Course at coursera.org Saint Petersburg State University
+              ""Enterprise economy
             </li>
           </ul>
         </section>
-        <section class="section" id="Education">
+        <section class="section section-education" id="Education">
           <div class="section-title">
             <h2>Education</h2>
+          </div>
+          <div class="education__block">
+            <div class="speciality">Cook, confectioner</div>
+            <span class="name-university"
+              >"Yalta College of Economics and Technology"</span
+            >, <span class="city-university">Yalta</span>,
+            <span class="year-study">2014-2015</span>
+          </div>
+          <div class="education__block">
+            <div class="speciality">Enterprise economy</div>
+            <span class="name-university"
+              >"Kyiv National University of Economics"</span
+            >, <span class="city-university">Kyiv</span>,
+            <span class="year-study">2013-2014</span>
           </div>
         </section>
         <section class="section" id="Language">
@@ -155,9 +256,69 @@
             <li>Ukrainian - Intermediate</li>
           </ul>
         </section>
+        <section class="section section-projects" id="Projects">
+          <div class="section-title">
+            <h2>Projects</h2>
+          </div>
+          <div class="project-block">
+            <div class="project__name">Momentum</div>
+            <div class="project__link">
+              <a
+                target="_blank"
+                href="https://rolling-scopes-school.github.io/gekalo1025-JSFEPRESCHOOL2022Q2/momentum/"
+              >
+                <img
+                  src="assets/images/image-project/momentum.jpg"
+                  alt="project-momentum"
+                />
+              </a>
+            </div>
+            <div class="project__description">
+              <p>
+                A copy of the functionality of the original Momentum application
+                from Google
+              </p>
+            </div>
+          </div>
+          <div class="project-block">
+            <div class="project__name">Travel</div>
+            <div class="project__link">
+              <a
+                target="_blank"
+                href="https://rolling-scopes-school.github.io/gekalo1025-JSFEPRESCHOOL2022Q2/Travel/"
+              >
+                <img
+                  src="assets/images/image-project/travel.jpg"
+                  alt="project-travel"
+                />
+              </a>
+            </div>
+            <div class="project__description">
+              <p>One page website layout</p>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="social-list">
+        <ul>
+          <li>
+            <span>2022</span>
+          </li>
+          <li>
+            <a target="_blank" href="https://rs.school/js/"
+              ><img src="./assets/icons/rs_school_js.svg" alt="rs_school"
+            /></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://github.com/gekalo1025"
+              ><img src="./assets/icons/github.svg" alt="gekalo1025"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
